:bug: Added missing build flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ ExternalProject_Add(
     GIT_SHALLOW TRUE
     GIT_PROGRESS TRUE
     CMAKE_ARGS
+    -DBUILD_DEV_VERSION=OFF
     -DCMAKE_INSTALL_PREFIX=${BLT_OUTPUT_DIR}
     -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
     -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
