:wrench: Add setting to disable PMM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,13 @@ include(ExternalProject)
 
 project(ror-release)
 
-file(DOWNLOAD "https://anotherfoxguy.com/pmm/pmm.cmake" "${CMAKE_BINARY_DIR}/pmm.cmake")
-include("${CMAKE_BINARY_DIR}/pmm.cmake")
-
-file(DOWNLOAD "https://github.com/RigsOfRods/rigs-of-rods/raw/master/conanfile.txt" "${CMAKE_SOURCE_DIR}/conanfile.txt")
-
-pmm(CONAN REMOTES ror-dependencies https://api.bintray.com/conan/anotherfoxguy/ror-dependencies BINCRAFTERS)
+option(RUN_PMM "Run PMM" OFF)
+if(RUN_PMM)
+    file(DOWNLOAD "https://anotherfoxguy.com/pmm/pmm.cmake" "${CMAKE_BINARY_DIR}/pmm.cmake")
+    include("${CMAKE_BINARY_DIR}/pmm.cmake")
+    file(DOWNLOAD "https://github.com/RigsOfRods/rigs-of-rods/raw/master/conanfile.txt" "${CMAKE_SOURCE_DIR}/conanfile.txt")
+    pmm(CONAN REMOTES ror-dependencies https://api.bintray.com/conan/anotherfoxguy/ror-dependencies BINCRAFTERS)
+endif()
 
 set(BLT_OUTPUT_DIR "${CMAKE_BINARY_DIR}/redist")
 file(MAKE_DIRECTORY ${BLT_OUTPUT_DIR})
