--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -1,4 +1,3 @@
----
 name: Build game
 
 on: push
@@ -8,19 +7,12 @@ jobs:
     name: Windows build
     runs-on: windows-2016
     env:
-      DXSDK_DIR: C:\apps\Microsoft DirectX SDK
-      CONAN_PATH: C:\Program Files\Conan\conan\
+      DXSDK_DIR: C:\apps\Microsoft DirectX SDK\
+      BUILD_TOOLS_PATH: C:\apps\build-tools\
     steps:
-      - run: echo $env:CONAN_PATH | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      - run: echo $env:BUILD_TOOLS_PATH | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - uses: actions/checkout@v2.3.4
-
-      - name: Install Microsoft DirectX SDK
-        shell: cmake -P {0}
-        run: |
-          file(MAKE_DIRECTORY $ENV{DXSDK_DIR})
-          file(DOWNLOAD https://vps.anotherfoxguy.com/ipfs/QmZm8WtxLxpmgxmYDTMPYjsbwmipr3KtrkPgGJoYiGBqhx "$ENV{TMP}/dl.zip" SHOW_PROGRESS)
-          execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzf "$ENV{TMP}/dl.zip" WORKING_DIRECTORY "$ENV{DXSDK_DIR}")
 
       - name: Cache conan
         uses: actions/cache@v1
@@ -34,28 +26,32 @@ jobs:
           key: conan-pkg-${{ hashFiles('**/hash.txt') }}
           path: C:/.conan/
 
-      - name: Install build dependencies
-        run: choco install conan jom -y
+      - name: Install Microsoft DirectX SDK and Build tools
+        shell: cmake -P {0}
+        run: |
+          file(MAKE_DIRECTORY $ENV{DXSDK_DIR})
+          file(DOWNLOAD http://prdownloads.sourceforge.net/rigs-of-rods/DirectX-SDK.zip "$ENV{TMP}/DirectX.zip" SHOW_PROGRESS)
+          execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzf "$ENV{TMP}/DirectX.zip" WORKING_DIRECTORY "$ENV{DXSDK_DIR}")
+          file(MAKE_DIRECTORY $ENV{BUILD_TOOLS_PATH})
+          file(DOWNLOAD http://prdownloads.sourceforge.net/rigs-of-rods/build-tools.zip "$ENV{TMP}/build-tools.zip" SHOW_PROGRESS)
+          execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzf "$ENV{TMP}/build-tools.zip" WORKING_DIRECTORY "$ENV{BUILD_TOOLS_PATH}")
+
+      - name: Enable Developer Command Prompt
+        uses: ilammy/msvc-dev-cmd@v1.7.0
 
       - name: Configure
-        run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-
-          cmake -G"NMake Makefiles JOM" -DCMAKE_BUILD_TYPE=Release -DBUILD_REDIST_FOLDER=ON -DFETCHCONTENT_QUIET=OFF -DRUN_PMM=ON .
+        run: cmake -G"NMake Makefiles JOM" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=redist -DFETCHCONTENT_QUIET=OFF -DRUN_PMM=ON .
         shell: cmd
 
       - name: Create redis folder
-        run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-
-          jom package
+        run: jom
         shell: cmd
 
       - name: Upload redist folder
         uses: actions/upload-artifact@v2
         with:
           name: ror-win
-          path: Rigs of Rods-2021.2.zip
+          path: redist
 
       - name: Clean Conan pkgs
         run: cmake -P ./pmm.cmake /Conan /Clean
